--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,6 +1,9 @@
 name: GitHub FORCE test
 run-name: ${{ github.actor }} is testing out FORCE
-on: [push]
+on:
+  [push]
+  schedule:
+    - cron: '0 18 * * *'
 jobs:
   Test-FORCE-Linux:
     runs-on: [self-hosted, linux]
