Only run on Wednesday.

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -2,7 +2,7 @@ name: GitHub FORCE test
 run-name: ${{ github.actor }} is testing out FORCE
 on:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 0 * * wed'
   push:
 jobs:
   Test-FORCE-Linux:
