--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -12,4 +12,4 @@ jobs:
         uses: actions/checkout@v3
       - run: pwd
       - run: ./initalize_tests.sh
-      - run: ./run_tests
+      - run: source raven/scripts/establish_conda_env.sh --load && ./run_tests
