--- a/developer_tools/rook.ini
+++ b/developer_tools/rook.ini
@@ -1,4 +1,4 @@
 [rook]
 add_non_default_run_types = qsub
-testers_dir = HERON/src/Testers
+testers_dir = HERON/src/Testers, src/Testers
 test_dir = tests
